# CI-CD-template

./: .gitlab-ci.yml  AGENT.md  CLAUDE.md  servidores vm.md
Test/: test-java.yml  unit-test-java.yml
actions/build-image-docker/: action.yml
actions/build-image-docker-automya-front/: README.md  action.yml
actions/build-image-docker-gcp/: README.md  action.yml
actions/build-image-docker-no-repo/: README.md  action.yml
actions/build-report-message/: action.yml
actions/deploy-app/: action.yml
actions/deploy-select-manifest/: action.yml
actions/gitops-pr/: action.yml
actions/java-test/: README.md  action.yml
actions/npm-test/: README.md  action.yml
actions/owasp-sast-scan/: action.yml
actions/publish-components/: README.md  action.yml
actions/publish-java-artifacts/: action.yml
actions/restart_deployment/: action.yml
actions/sast-scan/: action.yml
actions/sync-config/: action.yml
actions/sync-docs-confluence/: README.md  SETUP.md  action.yml
internal/build-context-determine/: action.yml
internal/build-report-message/: action.yml
internal/confluence-context-init/: action.yml
internal/confluence-detect-changes/: action.yml
internal/confluence-report/: action.yml
tools/workflow_sync/: README.md  WorkflowSync.command  WorkflowSync.spec  __init__.py  __main__.py  build.sh  cli.py  exceptions.py  interactive.py  models.py  pyproject.toml
tools/workflow_sync/clients/: __init__.py  github_client.py
tools/workflow_sync/services/: __init__.py  sync_service.py
tools/workflow_sync/validators/: __init__.py  input_validator.py
(+24 files in other folders)
