[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-sync"
version = "1.0.0"
description = "Sincroniza GitHub Actions workflows entre repositorios por topic"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Automya"}
]
keywords = ["github", "actions", "workflows", "sync", "ci-cd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "PyGithub>=2.1.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
workflow-sync = "workflow_sync.cli:main"
workflow-sync-interactive = "workflow_sync.interactive:main"

[project.urls]
Homepage = "https://github.com/Automya/CI-CD-template"
Repository = "https://github.com/Automya/CI-CD-template"

[tool.setuptools.packages.find]
where = ["."]
include = ["workflow_sync*"]
